# OpenCV_QRCode

./: (old)bar_code_recognize.cpp  CMakeLists.txt  QRCode_Locate.cpp  README.md  main.cpp
第10周-二维码-参考文献/: Opencv：10个步骤检测出图片中条形码.docx  opencv二维码识别解码.docx  第10周上机任务.txt
第10周-二维码-参考资料/: OPENCV条形码检测与识别.docx  Opencv+Zbar二维码识别（标准条形码+二维码识别.docx  opencv定位二维码.docx  ~$encv二维码识别解码.docx  使用OpenCV识别QRCode（Python版）(1).docx
